fixed banner alignment
Fixed banner alignment for secondary page banners

--- a/styles.css
+++ b/styles.css
@@ -113,13 +113,6 @@ a:hover {
   width: 1000px;
 }
 
-.banner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-}
 
 .posRel {
   position: relative;
